# Contactbook-API

./: README.md  alembic.ini  db_tests.py  example.env  main.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 1a623194d735_rev1.py  a063bf1e0126_rev2.py  c2aa337e827c_init.py
docs/: conf.py  index.rst
src/: config.py  database.py  database_postgres.py  database_redis.py  models.py
src/auth/: repository.py  routes.py  schemas.py  service.py
src/contacts/: repository.py  routes.py  schemas.py
src/emails/: repository.py  routes.py  schemas.py
src/mailing/: repository.py  routes.py  schemas.py  service.py
src/phones/: repository.py  routes.py  schemas.py
src/user/: repository.py  routes.py  schemas.py
templates/: email_verification.html  reset_password.html
tests/: conftest.py  test.db  test_auth.py  test_root.py  test_unit_repository_contatcts.py
