[tool.poetry]
name = "fastapi-addressbook"
version = "0.1.0"
description = ""
authors = ["NightSpring1 <deroy193@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_addressbook"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.0.3"}
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
uvicorn = {extras = ["standart"], version = "^0.23.1"}
psycopg2 = "^2.9.6"
asyncpg = "^0.28.0"
redis = "^4.6.0"
alembic = "^1.11.1"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
fastapi-limiter = "^0.1.5"
fastapi-mail = "^1.4.1"
faker = "^19.1.0"
pydantic-settings = "^2.0.2"
cloudinary = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
